# internal/interface/api/energy_consumption.controller.go
@@ -1,6 +1,11 @@
 package api
 
-import "context"
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/7yrionLannister/golang-technical-assesment-v2/pkg/log"
+)
 
 // TODO: mock for unit tests
 type EnergyConsumptionControllerInterface interface {
@@ -16,4 +21,18 @@ func NewEnergyConsumptionController() *EnergyConsumptionController {
 func (EnergyConsumptionController) GetConsumption(ctx context.Context, request GetConsumptionRequestObject) (GetConsumptionResponseObject, error) {
 	// TODO: implement
 	return nil, nil
+}
+
+func (EnergyConsumptionController) GetOpenapi(ctx context.Context, request GetOpenapiRequestObject) (GetOpenapiResponseObject, error) {
+	swagger, err := GetSwagger()
+	if err != nil {
+		log.L.Error("Failed to load swagger spec")
+	}
+	swaggerJSON, err := json.Marshal(swagger)
+	if err != nil {
+		log.L.Error("Failed to turn spec into json")
+	}
+	v := &map[string]any{}
+	json.Unmarshal(swaggerJSON, v)
+	return GetOpenapi200JSONResponse(*v), nil
 }
